Rename to SyncCollectionVersions
